# playscript-monodevelop

./: .gitignore  .gitmodules
main/: Main.sln  (+2 more)
main/src/addins/PlayScriptBinding/: AssemblyInfo.cs  Makefile  Makefile.am  PlayScriptBinding.addin.xml  PlayScriptBinding.csproj  PlayScriptBinding_old.csproj  addin.info  md1format.xml
main/src/addins/PlayScriptBinding/AspNet/: Makefile
main/src/addins/PlayScriptBinding/Autotools/: CSharpAutotoolsSetup.cs  Makefile
main/src/addins/PlayScriptBinding/MonoDevelop.CSharp/: ActionScriptLanguageBinding.cs  CSharpBindingCompilerManager.cs  CSharpLanguageBinding.cs  PlayScriptLanguageBinding.cs
main/src/addins/PlayScriptBinding/MonoDevelop.CSharp.CodeGeneration/: RaiseEventMethodGenerator.cs  ReadonlyPropertyGenerator.cs
main/src/addins/PlayScriptBinding/MonoDevelop.CSharp.Completion/: CSharpCompletionTextEditorExtension.cs
main/src/addins/PlayScriptBinding/MonoDevelop.CSharp.Highlighting/: CSharpSyntaxMode.cs
main/src/addins/PlayScriptBinding/MonoDevelop.CSharp.Parser/: TypeSystemProvider.cs
main/src/addins/PlayScriptBinding/MonoDevelop.CSharp.Project/: CSharpCompilerParameters.cs  CSharpProjectParameters.cs  CodeGenerationPanel.cs  CompilerOptionsPanelWidget.cs
main/src/addins/PlayScriptBinding/MonoDevelop.CSharp.Refactoring/: CSharpCodeGenerator.cs  CSharpReferenceFinder.cs
main/src/addins/PlayScriptBinding/MonoDevelop.CSharp.Resolver/: HelperMethods.cs
main/src/addins/PlayScriptBinding/MonoDevelop.PlayScript/: ActionScriptLanguageBinding.cs  PlayScriptBindingCompilerManager.cs  PlayScriptLanguageBinding.cs
(+101 files in other folders)
